# qnc-curriculum-studio

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CONTRIBUTIONS.md  CRITICAL_ISSUE_DIAGNOSIS.md  DEPLOYMENT_GUIDE.md  ENABLE_ENRICHMENT.md  FINAL_SOLUTION.md  FINAL_STATUS_AND_NEXT_STEPS.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  LICENSE  MULTI_USER_AUTH_GUIDE.md  NARRATIVE_ENRICHMENT_IMPLEMENTATION.md  OUTPUT_QUALITY_ANALYSIS.md  PHASE_1_IMPLEMENTATION.md  QUALITY_ANALYSIS.md  QUICK_START.md  README.md  READY_TO_TEST.md  RESEARCH_ENGINE_TRANSFORMATION.md  SECURITY.md  SECURITY_IMPROVEMENTS_PRE_PENTEST.md  SIMPLIFIED_SETUP.md  START_SYSTEM.ps1  SYSTEM_READY.md  TEST_GUIDE.md  test_sequential_pipeline.py  verify_before_push.ps1
backend/: .gitignore  README.md  SEEDING_INSTRUCTIONS.md  ingest_python_database.py  ingest_python_database_simple.py  ingestion_log.txt  pyproject.toml  run_server.py  seed_python_docs.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/clients/: embeddings.py
backend/app/core/: config.py  logging.py  redis.py
backend/app/db/: base.py  dependencies.py  models.py  session.py  utils.py
backend/app/graph/: complexity_classifier.py  cot_storyteller.py  narrative_enricher.py  narrative_enrichment_v2.py  quality_gates.py  question_classifier.py  research_graph.py  research_synthesis_agent.py  (+6 more)
backend/config/: settings.env.example  settings.env.template
backend/tests/: conftest.py  test_chunker.py  test_filters.py  test_health.py  test_metrics.py  test_narrative_enricher.py  test_provider_factory.py  test_secret_store.py
(+64 files in other folders)
